--- a/config/config.yml
+++ b/config/config.yml
@@ -1,5 +1,5 @@
 genome: human # human or mouse
-encode_genome_build: "44"
+gencode_genome_build: "44"
 fdr_cutoff: 0.05 # adj p value cut off for volcano plots
 fc_cutoff: 0.5 # log2 fold change cut off for volcano plots
 salmon-quant: 
