--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -33,6 +33,7 @@ rule all:
         "results/plots/sample_distance.pdf",
         "results/plots/volcano/",
         "results/qc/multiqc/multiqc.html",
+        "results/qc/multiqc/",
 
 # Rules to be run on login node (very small jobs)
 localrules: all, get_genome_fasta, get_trx_fasta, get_gtf
@@ -45,7 +46,7 @@ onsuccess:
     shell("cp -v {log} {snake_log}")
 
     # Compress genome files
-    shell(f"pigz {resources.fasta} {resources.trx_fasta} {resources.gtf}")
+    #shell(f"pigz {resources.fasta} {resources.trx_fasta} {resources.gtf}")
     print("Analysis finished successfully!")
 
 onerror:
