--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,14 +46,15 @@ jobs:
         snakefile: workflow/Snakefile
         args: "--use-conda --show-failed-logs --cores 3 --conda-cleanup-pkgs cache --all-temp"
     
-    - name: Upload coverage reports to Codecov
-      run: |
-        curl -Os https://uploader.codecov.io/latest/linux/codecov
-        chmod +x codecov
-        ./codecov -t ${CODECOV_TOKEN}
-    #- name: Test report
-    #  uses: snakemake/snakemake-github-action@v1.24.0
-    #  with:
-    #    directory: .test
-    #    snakefile: workflow/Snakefile
-    #    args: "--report report.zip"
+    - name: Test report
+      uses: snakemake/snakemake-github-action@v1.24.0
+      with:
+        directory: .test
+        snakefile: workflow/Snakefile
+        args: "--report report.zip"
+
+    #- name: Upload coverage reports to Codecov
+    #  run: |
+    #    curl -Os https://uploader.codecov.io/latest/linux/codecov
+    #    chmod +x codecov
+    #    ./codecov -t ${CODECOV_TOKEN}
