added DESeq2 options

--- a/config/config.yml
+++ b/config/config.yml
@@ -1,11 +1,14 @@
 genome: human # human or mouse
-gencode_genome_build: "44"
+gencode_genome_build: 44
 fdr_cutoff: 0.05 # adj p value cut off for volcano plots
 fc_cutoff: 0.5 # log2 fold change cut off for volcano plots
 salmon-quant: 
   extra_params: "" # additional arguments to pass to Salmon
 salmon-index:
   extra_params: "--gencode"
+deseq2:
+  # custom model for DESeq2
+  design: "" 
 resources: # computing resources
   trim:
     cpu: 8
