schema for samples.csv, bumped wrapper version

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -8,13 +8,13 @@ from snakemake.logging import logger
 report: "report/workflow.rst"
 
 # Workflow version
-VERSION = "v0.7.0"
+VERSION = "v0.7.1"
 
 # Set minimum snakemake version
-min_version("8.12.0")
+min_version("8.13.0")
 
 # Wrapper version
-wrapper_version = "v3.12.0"
+wrapper_version = "v4.3.0"
 
 logger.info(f"Workflow version: {VERSION}")
 logger.info(f"Wrapper version: {wrapper_version}")
@@ -28,7 +28,7 @@ validate(config, "schemas/config.schema.yaml")
 
 # Load and validate sample info
 sample_info = pd.read_csv("config/samples.csv")
-#validate(sample_info, "schemas/samples.schema.yaml")
+validate(sample_info, "schemas/samples.schema.yaml")
 
 # Load genome resources to be used in rules
 resources = Resources(config["genome"], config["gencode_genome_build"])
