--- a/workflow/envs/deseq2.yml
+++ b/workflow/envs/deseq2.yml
@@ -4,22 +4,18 @@ channels:
   - bioconda
   - defaults
 dependencies:
-  - r-base=4.2
+  - r-base=4.4
+  - r-tidyverse=2.0.0
   - r-rcolorbrewer=1.1_3
-  - r-dplyr=1.1.2
   - r-pheatmap=1.0.12
-  - r-stringr=1.5.0
-  - r-ggplot2=3.4.2
-  - r-cowplot=1.1.1
-  - r-readr=2.1.4
-  - r-readxl=1.4.2
-  - r-openxlsx=4.2.5
+  - r-cowplot=1.1.3
   - r-foreach=1.5.2
-  - r-ggrepel=0.9.3
-  - bioconductor-deseq2=1.38.0
-  - bioconductor-genomicfeatures=1.50.2
-  - bioconductor-tximport=1.26.0
-  - r-ggfortify=0.4.16
-  - bioconductor-limma=3.54.0
-  - bioconductor-rtracklayer=1.58.0
+  - r-ggrepel=0.9.6
+  - bioconductor-deseq2=1.46.0
+  - bioconductor-genomicfeatures=1.58.0
+  - bioconductor-tximport=1.34.0
+  - r-ggfortify=0.4.17
+  - bioconductor-limma=3.62.1
+  - bioconductor-rtracklayer=1.66.0
+  - bioconductor-txdbmaker=1.2.0
   
